# mrs_workspace

./: .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  GIT_SETUP.md  INSTALLATION_GUIDE.md  INSTALLATION_STATUS.md  README.md  WORKSPACE_SUMMARY.md  build_workspace.sh  install_mrs_system.sh  install_mrs_workspace.sh  install_system_deps.sh  setup.sh
src/mrs_flight_forge_connector/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  format.sh  lint.sh  package.xml
src/mrs_flight_forge_connector/examples/cli/: CMakeLists.txt  benchmarkFPS.cpp  cameraBechmark.cpp  cameraFPS.cpp  cameraMultiBench.cpp  debug-cli.cpp  debug_game_mode_cli.cpp  lidarBechmark.cpp  lidarFPS.cpp
src/mrs_flight_forge_connector/examples/python/: configs.py  learn.py  learn_camera.py  requirements-nvidia.txt  requirements.txt  showcase.py  ueds_camera_env.py  ueds_learn.py  ueds_lidar_env.py  utils.py
src/mrs_flight_forge_connector/include/flight_forge_connector/: data_types.h  flight_forge_connector.h  game_mode_controller.h  socket_client.h
src/mrs_flight_forge_connector/src/: CMakeLists.txt  flight_forge_connector.cpp  game_mode_controller.cpp  socket_client.cpp
src/mrs_flight_forge_connector/src/python-modules/: drone-controller-module.cpp  game-mode-controller-module.cpp
src/mrs_modules_msgs/: .gitignore  CMakeLists.txt  README.md  msg_list.txt  package.xml  reformat_files.sh  rosdoc2.yaml  srv_list.txt  test_msgs.sh
src/mrs_modules_msgs/.github/workflows/: docs.yml
src/mrs_modules_msgs/msg/: BacaProtocol.msg  Bestpos.msg  Bestvel.msg  GPSFix.msg  GimbalPRY.msg  Gpgga.msg  Gpgsa.msg  Gpgst.msg  Gpgsv.msg  Gprmc.msg  GpsStatus.msg  Gpvtg.msg  GripperDiagnostics.msg  Llcp.msg  OctomapPlannerDiagnostics.msg  ParachuteDiagnostics.msg  PclToolsDiagnostics.msg  PoseWithSize.msg  Range.msg  RangeInformation.msg  Satellite.msg  SensorInfo.msg  SerialRaw.msg  TersusMessageHeader.msg  Time.msg  Trackstat.msg  TrackstatChannel.msg
src/mrs_modules_msgs/msg/gnss/: Bestpos.msg  GPSFix.msg  Gprmc.msg
src/mrs_modules_msgs/msg/sensors/: SensorInfo.msg
src/mrs_modules_msgs/srv/: Path.srv  SetServo.srv  SetTrigger.srv
src/mrs_rviz_plugins/: CMakeLists.txt  package.xml  plugins.xml
src/mrs_rviz_plugins/src/sphere/: display.cpp  visual.cpp
src/mrs_rviz_plugins/src/textured_mesh_display/: surface_normals_visual.cpp  textured_mesh_display.cpp  textured_mesh_visual.cpp
src/mrs_uav_autostart/: CMakeLists.txt  README.md  package.xml
src/mrs_uav_autostart/config/private/: automatic_start.yaml
src/mrs_uav_autostart/launch/: automatic_start.launch.py
src/mrs_uav_autostart/scripts/: get_public_params.py
src/mrs_uav_autostart/src/: automatic_start.cpp
src/mrs_uav_autostart/test/: CMakeLists.txt  run_specific_test.sh
src/mrs_uav_autostart/test/takeoff_should_fail_topic_check/: CMakeLists.txt  test.cpp  test.py
src/mrs_uav_autostart/test/takeoff_should_fail_while_moving/: test.cpp  test.py
src/mrs_uav_autostart/test/takeoff_should_succeed/: test.cpp  test.py
src/mrs_uav_autostart/test/takeoff_trigerred_externally/: test.cpp  test.py
src/mrs_uav_core/ros_packages/mrs_uav_core/: CMakeLists.txt  package.xml
src/mrs_uav_flightforge_simulator/: CMakeLists.txt  README.md  plugins.xml
src/mrs_uav_flightforge_simulator/config/: flightforge_simulator.yaml  hw_api.yaml
src/mrs_uav_flightforge_simulator/launch/: flightforge_simulator.launch.py  hw_api.launch.py
src/mrs_uav_flightforge_simulator/src/: flightforge_simulator.cpp  hw_api_plugin.cpp
src/mrs_uav_flightforge_simulator/tmux/one_drone/: rviz.rviz
src/mrs_uav_hw_api/: .gitignore  CMakeLists.txt  Doxyfile  package.xml
src/mrs_uav_hw_api/.github/workflows/: docs.yml
src/mrs_uav_hw_api/launch/: hw_api.launch.py
src/mrs_uav_hw_api/src/: dummy_api.cpp  hw_api_manager.cpp
src/mrs_uav_hw_api/test/: CMakeLists.txt  run_specific_test.sh  run_tests.sh
src/mrs_uav_hw_api/test/load_dummy/: CMakeLists.txt  test.cpp  test.py
src/mrs_uav_managers/: CMakeLists.txt
src/mrs_uav_managers/config/private/: controllers.yaml  safety_area_manager.yaml
src/mrs_uav_managers/config/public/: active_estimators.yaml  controllers.yaml
src/mrs_uav_managers/include/transform_manager/: tf_source.h
src/mrs_uav_managers/launch/: control_manager.launch.py  estimation_manager.launch.py  safety_area_manager.launch.py  transform_manager.launch.py
src/mrs_uav_managers/src/: constraint_manager.cpp  gain_manager.cpp  null_tracker.cpp  safety_area_manager.cpp  uav_manager.cpp
src/mrs_uav_managers/src/control_manager/: control_manager.cpp  output_publisher.cpp
src/mrs_uav_managers/src/estimation_manager/: estimation_manager.cpp  estimator.cpp
src/mrs_uav_managers/src/transform_manager/: transform_manager.cpp
src/mrs_uav_managers/test/: CMakeLists.txt  run_specific_test.sh
src/mrs_uav_managers/test/constraint_manager/: CMakeLists.txt
src/mrs_uav_managers/test/control_manager/: CMakeLists.txt
src/mrs_uav_managers/test/estimation_manager/: CMakeLists.txt
src/mrs_uav_managers/test/gain_manager/: CMakeLists.txt
src/mrs_uav_testing/: .gitignore  CMakeLists.txt  README.md
src/mrs_uav_testing/config/: default_mrs_multirotor_simulator_config.yaml
src/mrs_uav_testing/launch/: mrs_multirotor_simulator.launch.py  mrs_uav_system.launch.py
src/mrs_uav_testing/src/: test_generic.cpp
src/mrs_uav_testing/test/: CMakeLists.txt  run_specific_test.sh
src/mrs_uav_trackers/: CMakeLists.txt  plugins.xml
src/mrs_uav_trackers/src/: flip_tracker.cpp  landoff_tracker.cpp  line_tracker.cpp  midair_activation_tracker.cpp  mpc_tracker.cpp
src/mrs_uav_trackers/test/: CMakeLists.txt  run_specific_test.sh
src/mrs_uav_trajectory_generation/: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml
src/mrs_uav_trajectory_generation/launch/: path_random_flier.launch.py  trajectory_generation.launch.py
src/mrs_uav_trajectory_generation/scripts/: get_public_params.py
src/mrs_uav_trajectory_generation/src/: mrs_trajectory_generation.cpp  path_random_flier.cpp
src/mrs_uav_trajectory_generation/test/: CMakeLists.txt  run_specific_test.sh
(+3596 files in other folders)
