<?xml version="1.0"?>
<package format="2">

  <name>mrs_flight_forge_connector</name>
  <version>1.0.0</version>
  <description>The dummy package to link the FlightForge plugin with the rest of the system</description>

  <author email="capekda4@fel.cvut.cz">David Capek</author>
  <maintainer email="capekda4@fel.cvut.cz">David Capek</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>

</package>
